# DomicTorrento

./: .gitmodules  CMakeLists.txt  README.md
includes/: BencodeReader.hpp  PrettyPrinter.hpp  Values.hpp
src/: BencodeReader.cpp  PrettyPrinter.cpp  Values.cpp  main.cpp
tests/: parser_test.cpp
torrent/: sample1.torrent  test2.torrent
